syntax = "proto3";

package auth_v1;

import "validate/validate.proto";

option go_package = "github.com/kom1ssar/grpc-auth/pkg/auth_v1;auth_v1";


service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetRefreshToken(GetRefreshTokenRequest) returns (GetRefreshTokenResponse);
    rpc GetAccessToken(GetAccessTokenRequest) returns (GetAccessTokenResponse);
}


message LoginRequest {
  string email = 1 [(validate.rules).string.email = true];
  string password = 3 [(validate.rules).string = {min_len: 5, max_len: 50}];
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message GetRefreshTokenRequest {
  string refresh_token = 1 [(validate.rules).string.min_len = 5];
}

message GetRefreshTokenResponse {
  string refresh_token = 1;
}

message GetAccessTokenRequest {
  string refresh_token = 1 [(validate.rules).string.min_len = 5];
}

message GetAccessTokenResponse {
  string access_token = 1;
}

