syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/kom1ssar/grpc-auth/pkg/user_v1;user_v1";

enum UserRole{
  USER = 0;
  ADMIN = 1;
}


service UserV1{
  rpc Create(CreateUserRequest) returns (CreateUserResponse);
  rpc Get(GetUserRequest) returns (GetUserResponse);
  rpc Update(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteUserRequest) returns (google.protobuf.Empty);

}



message User{
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  UserRole role = 5;
}

message CreateUserRequest{
  User user = 1;
}

message CreateUserResponse{
  int64 id = 1;
}

message GetUserRequest{
  int64 id = 1;
}

message GetUserResponse{
  int64 id = 1;
  string name = 2;
  string email = 3;
  UserRole role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}


message UpdateUserRequest{
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
}

message DeleteUserRequest{
  int64 id = 1;
}